--- a/Gemma/Views/Shared/_BackStagePartialTop.cshtml
+++ b/Gemma/Views/Shared/_BackStagePartialTop.cshtml
@@ -1,7 +1,4 @@
-﻿<link href="~/Assets/css/main.css" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
-<script type="text/javascript" src="~/Assets/js/main.js"></script>
-<div class="app-header header-shadow">
+﻿<div class="app-header header-shadow">
     <div class="app-header__logo">
     </div>
     <div class="app-header__mobile-menu">
