--- a/Gemma/Views/AspNetUsers/_Layout.cshtml
+++ b/Gemma/Views/AspNetUsers/_Layout.cshtml
@@ -5,9 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的 ASP.NET 應用程式</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/ContentBack/css")
     @Scripts.Render("~/bundles/modernizr")
-
 
     @RenderSection("topCSS", required: false)
     @RenderSection("topJS", required: false)
