--- a/Gemma/Views/BackStageHome/Index.cshtml
+++ b/Gemma/Views/BackStageHome/Index.cshtml
@@ -2,46 +2,73 @@
 @{
     ViewBag.Title = "Index";
 }
+<div class="tab-content">
+    <div class="tab-pane tabs-animation fade show active" id="tab-content-0" role="tabpanel">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Pie Chart</h5>
+                        <canvas id="chart-area"></canvas>
+                    </div>
+                </div>
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Radar Chart</h5>
+                        <canvas id="radar-chart"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Doughnut</h5>
+                        <canvas id="doughnut-chart"></canvas>
+                    </div>
+                </div>
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Polar Chart</h5>
+                        <canvas id="polar-chart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<canvas id="backhomepage"></canvas>
-@section endJS{
-    <script>
-        var ctx = document.getElementById("backhomepage");
-        var chart = new Chart(ctx, {
-            type: "line",
-            data: {
-                labels: ['1月', '2月', '3月', '4月', '5月', '6月'],
-                datasets: [{
-                    label: "Gemma",
-                    data: [16, 15, 18, 21, 25, 27],
-                    fill: false,
-                    backgroundColor: 'rgba(255,165,0,0.3)',
-                    borderColor: 'rgb(255,165,0)',
-                    pointStyle: "circle",
-                    pointBackgroundColor: 'rgb(0,255,0)',
-                    pointRadius: 5,
-                    pointHoverRadius: 10,
-                }]
-            },
-            options: {
-                responsive: true,
-                title: {
-                    display: true,
-                    fontSize: 26,
-                    text: '上半年營業額'
-                },
-                tooltips: {
-                    mode: 'point',
-                    intersect: true,
-                },
-                legend: {
-                    position: 'bottom',
-                    labels: {
-                        fontColor: 'black',
-                    }
-                }
-            }
-        });
-    </script>
-}
+    </div>
+    <div class="tab-pane tabs-animation fade" id="tab-content-1" role="tabpanel">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Vertical Bars</h5>
+                        <canvas id="canvas"></canvas>
+                    </div>
+                </div>
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Horizontal Bars</h5>
+                        <canvas id="chart-horiz-bar"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Line Chart</h5>
+                        <div style="height: 400px">
+                            <canvas id="line-chart"></canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-card mb-3 card">
+                    <div class="card-body">
+                        <h5 class="card-title">Stacked Bars</h5>
+                        <canvas id="stacked-bars-chart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
