--- a/Gemma/Views/BackStock/Create.cshtml
+++ b/Gemma/Views/BackStock/Create.cshtml
@@ -50,7 +50,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="新增" class="btn btn-primary" />
+                    <input type="submit" value="修改" class="btn btn-primary" />
                 </div>
             </div>
         </div>
