--- a/Gemma/Views/Account/ConfirmEmail.cshtml
+++ b/Gemma/Views/Account/ConfirmEmail.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "確認電子郵件";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 style="text-align:center">確認メール</h2>
 <div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+    <p style="font-size:20px; text-align:center">
+        メールを確認していただきありがとうございます。 ここをクリックしてください @Html.ActionLink("会員登録が完了しました", "Home", "MemberCenter", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
