--- a/Gemma/Views/Account/Info.cshtml
+++ b/Gemma/Views/Account/Info.cshtml
@@ -3,8 +3,9 @@
     ViewBag.Title = "Info";
 }
 
-<h2>Info</h2>
+@*<h2>Info</h2>
 
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title.</h2>*@
+@*<h3 style="text-align:center">@ViewBag.Message</h3>*@
+<h3 style="text-align:center">メールをチェックしてアカウントを確認します。ログインする前に確認する必要があります。</h3>
 
