--- a/Gemma/Views/OnlineStore/OnlineStore.cshtml
+++ b/Gemma/Views/OnlineStore/OnlineStore.cshtml
@@ -6,16 +6,19 @@
 
     }*@
 
+@using Gemma.Models;
+@model IEnumerable<Gemma.ViewModel.OnlineStore>
+
+@section topCSS{
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="~/Assets/css/FixedMenu.css" rel="stylesheet" />
+    <link href="~/Assets/css/OnlineStore.css" rel="stylesheet" />
+}
 
 @{
     ViewBag.Title = "OnlineStore";
 }
-@section topCSS{
-    <link href="~/Assets/css/OnlineStore.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link href="~/Assets/css/FixedMenu.css" rel="stylesheet" />
-   
-}
+
 
 @Html.Partial("IndexPartial")
 
@@ -96,371 +99,17 @@
             </div>
             <br />
             <br />
-            <!--鞋子圖片-->
             <div class="row">
+                <!--鞋子圖片-->
+                @foreach (var photo in Model)
+                {
+                    @Html.Partial("_OnlineStorePartial", photo);
 
-                <div class="col-4">
-                    <!--<img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/GE20527-1.jpg" alt="">-->
-                    
+                }
 
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-
-                        </div>
-                        <div class="position-right-2">
-
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/GE19101A-1.jpg">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                           
-                        </div>
-                        <div class="position-right-2">
-                            
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19101A-1.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/DA19608-01.jpg" alt="">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/DA19608-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/DA19608-07.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-
-                    </div>
-
-                </div>
-
+                <br />
+                <br />
             </div>
-
-
-            <div class="row">
-                <div class="col-4 photo-word">GEMMA LINN<br>ベロアバレエシューズ<br>10,000 円 + TAX</div>
-                <div class="col-4 photo-word">GEMMA LINN<br>ポインテッドバレエシューズ<br>10,000 円 + TAX</div>
-                <div class="col-4 photo-word">GEMMA LINN<br>ポインテッドラビットファーミュール<br>11,000 円 + TAX</div>
-            </div>
-            <br />
-
-            <div class="row">
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/DA19606-01.jpg" alt="">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-01.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/DA19605-01.jpg">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19112-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/GE19112-01.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19112-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/DA19602-01.jpg" alt="">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-01.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-            <br />
-
-            <div class="row">
-                <div class="col-4 photo-word">GEMMA LINN<br>ベロアバレエシューズ<br>10,000 円 + TAX</div>
-                <div class="col-4 photo-word">GEMMA LINN<br>ポインテッドバレエシューズ<br>10,000 円 + TAX</div>
-                <div class="col-4 photo-word">GEMMA LINN<br>ポインテッドラビットファーミュール<br>11,000 円 + TAX</div>
-            </div>
-            <br />
-
-            <div class="row">
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/DA19602H-01.jpg" alt="">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-01.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19107-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/DA19607-01.jpg">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19112-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/GE19112-01.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19112-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="col-4">
-                    <img src="https://danigemma.com/images/thumbnails/500/500/detailed/4/GE19801-01.jpg" alt="">
-
-                    <div>
-                        <div class="position-left">
-                            <img src="https://danigemma.com/design/themes/responsive/media/images/shop/common/header-icon-bookmark.svg?1573801632"
-                                 class="heart">
-                        </div>
-
-                        <div class="position-right-1">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-06.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-2">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-01.png"
-                                 class="small-color">
-                        </div>
-                        <div class="position-right-3">
-                            <img src="https://danigemma.com/images/color_chip/GE19902-08.png"
-                                 class="small-color">
-                        </div>
-
-                        <div class="right-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-next.png?1573801632">
-                            </a>
-                        </div>
-                        <div class="left-side">
-                            <a href="">
-                                <img src="https://danigemma.com/design/themes/responsive/media/images/shop/assets/slider-prev.png?1573801632">
-                            </a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-            <br />
-
-            <div class="row">
-                <div class="col-4 photo-word">GEMMA LINN<br>ベロアバレエシューズ<br>10,000 円 + TAX</div>
-                <div class="col-4 photo-word">GEMMA LINN<br>ポインテッドバレエシューズ<br>10,000 円 + TAX</div>
-                <div class="col-4 photo-word">GEMMA LINN<br>ポインテッドラビットファーミュール<br>11,000 円 + TAX</div>
-            </div>
-            <br />
-            <br />
-
 
         </div>
     </div>
@@ -469,6 +118,10 @@
 
 @Html.Partial("_Footer")
 
+
+
 @section endJS{
 
+
 }
+
