--- a/Gemma/Views/Shared/_OnlineStorePartial.cshtml
+++ b/Gemma/Views/Shared/_OnlineStorePartial.cshtml
@@ -12,44 +12,44 @@
     </div>*@
 
 
-    <div class="col-4">
+<div class="col-4">
 
-        <img src="~/Assets/images/product/@Model.Category/@Model.Picture/1.jpg" alt="">
+    <img src="~/Assets/images/product/@Model.Category/@Model.Picture/1.jpg" alt="">
 
 
-        <div class="position-left heart">
-            <img src="~/Assets/images/Icons/@Model.Heart" alt="">
+    <div class="position-left heart">
+        <img src="~/Assets/images/Icons/@Model.Heart" alt="">
 
-        </div>
-
-        <div class="position-right-1">
-
-        </div>
-        <div class="position-right-2">
-
-        </div>
-        <div class="position-right-3">
-            <img src="https://danigemma.com/images/color_chip/GE19107-08.png"
-                 class="small-color">
-        </div>
-
-        <div class="right-side">
-            <a href="">
-                <img src="~/Assets/images/@Model.Next" alt="">
-            </a>
-        </div>
-        <div class="left-side">
-            <a href="">
-                <img src="~/Assets/images/@Model.Prev" alt="">
-            </a>
-        </div>
-        <br />
-        <div>
-            <div class=" photo-word bottom-side">@Model.Brand<br>@Model.ProductName<br>@Model.Price@Model.Tax</div>
-        </div>
     </div>
 
-    @*<div class="col-4 photo-word">@Html.DisplayFor(x => x.Brand)GEMMA LINN<br>ベロアバレエシューズ<br>10,000 円 + TAX</div>*@
+    <div class="position-right-1">
+
+    </div>
+    <div class="position-right-2">
+
+    </div>
+    <div class="position-right-3">
+        <img src="https://danigemma.com/images/color_chip/GE19107-08.png"
+             class="small-color">
+    </div>
+
+    <div class="right-side">
+        <a href="">
+            <img src="~/Assets/images/@Model.Next" alt="">
+        </a>
+    </div>
+    <div class="left-side">
+        <a href="">
+            <img src="~/Assets/images/@Model.Prev" alt="">
+        </a>
+    </div>
+    <br />
+    <div>
+        <div class=" photo-word bottom-side">@Model.Brand<br>@Model.ProductName<br>@Model.Price 円 @Model.Tax</div>
+    </div>
+</div>
+
+@*<div class="col-4 photo-word">@Html.DisplayFor(x => x.Brand)GEMMA LINN<br>ベロアバレエシューズ<br>10,000 円 + TAX</div>*@
 
 
 
