全部變成部分檢視---記錄點---未完成

--- a/Gemma/Views/OnlineStore/OnlineStore.cshtml
+++ b/Gemma/Views/OnlineStore/OnlineStore.cshtml
@@ -103,7 +103,7 @@
                 <!--鞋子圖片-->
                 @foreach (var photo in Model)
                 {
-                    @Html.Partial("_OnlineStorePartial", photo);
+                    @Html.Partial("_OnlineStorePicturePartial", photo);
 
                 }
 
