--- a/Gemma/Views/OnlineStore/OnlineStore.cshtml
+++ b/Gemma/Views/OnlineStore/OnlineStore.cshtml
@@ -1,13 +1,9 @@
-﻿@*@section  topCSS{
-        <link rel="stylesheet" href="~/Content/OnlineStore.css" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
-              integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+﻿@model IEnumerable<Gemma.ViewModel.OnlineStore>
 
-    }*@
+@{
+    ViewBag.Title = "OnlineStore";
+}
 
-@using Gemma.Models;
-@model IEnumerable<Gemma.ViewModel.OnlineStore>
 
 @section topCSS{
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
@@ -15,113 +11,6 @@
     <link href="~/Assets/css/OnlineStore.css" rel="stylesheet" />
 }
 
-@{
-    ViewBag.Title = "OnlineStore";
-}
-
-
-@Html.Partial("IndexPartial")
-
-<div class="container">
-
-    <div class="row">
-
-        <div class="col">
-
-            <div class="left-list">
-                BRAND ——
-                <ul>
-                    <li class="all-underline">ALL</li>
-                    <li>Daniella Tam</li>
-                    <li>GEMMA LINN</li>
-                </ul>
-            </div>
-
-            <div class="left-list">
-                CATEGORY ——
-                <ul>
-                    <li class="all-underline">ALL</li>
-                    <li>PUMPS</li>
-                    <li>FLAT SHOES</li>
-                    <li>MANNISH</li>
-                    <li>SNEAKER</li>
-                    <li>SANDAL</li>
-                    <li>BOOTS</li>
-                </ul>
-            </div>
-
-            <div class="left-list">
-                COLOR ——
-                <ul>
-                    <li class="all-underline">ALL</li>
-                    <li>BLACK/GRAY</li>
-                    <li>BEIGE/BROWN</li>
-                    <li>WHITE/IVORY</li>
-                    <li>PINK/ORANGE</li>
-                    <li>BLUE/GREEN</li>
-                    <li>RED/PURPLE</li>
-                    <li>GOLD/SILVER</li>
-                    <li>ANIMAL/PATTERN / MALTI</li>
-                </ul>
-            </div>
-
-            <div class="left-list">
-                PRICE ——
-
-            </div>
-
-        </div>
-
-        <div class="col">
-            <!--右上大圖片-->
-            <div><img src="https://danigemma.com/images/shop/category/category-all.jpg" class="bigphoto"></div>
-            <br />
-            <br />
-            <div class="p-class">
-                <p>
-                    エレガントなデザインとインポートのようなフォルムが魅力のDaniella Tam
-                    （ダニエラ タム）、程よく辛口でトレンド感のあるカジュアルシューズGEMMA LINN
-                    （ジェマ リン）。異なる２人のシューズクローゼットをイメージし、ベーシックから
-                    遊び心あふれるデザインまでデイリーに履けるモードなシューズコレクション。
-                </p>
-            </div>
-            <br />
-            <!--右邊下拉式選單-->
-            <div class="select-div">
-                <form>
-                    SORT :
-                    <select name="sort" class="select">
-                        <option value="set" selected>登録日時の新しい順</option>
-                        <option value="low">価格の低い順</option>
-                        <option value="high">価格の高い順</option>
-                    </select>
-                </form>
-            </div>
-            <br />
-            <br />
-            <div class="row">
-                <!--鞋子圖片-->
-                @foreach (var photo in Model)
-                {
-                    @Html.Partial("_OnlineStorePicturePartial", photo);
-
-                }
-
-                <br />
-                <br />
-            </div>
-
-        </div>
-    </div>
-
-</div>
-
-@Html.Partial("_Footer")
-
-
-
+@Html.Partial("OnlineStorePartial")
 @section endJS{
-
-
 }
-
