簡化OnlineStore頁面，路由設定完成，使用DaniellaGemma/OnlineStore/{category}連接左邊查詢項目，未達成直接按網頁連接。

--- a/Gemma/Views/OnlineStore/FindBrand.cshtml
+++ b/Gemma/Views/OnlineStore/FindBrand.cshtml
@@ -1,6 +1,8 @@
-﻿@*@{
-    ViewBag.Title = "OnlineStore_Category_MANNISH";
+﻿
+@{
+    ViewBag.Title = "FindBrand";
 }
+@model IEnumerable<Gemma.ViewModel.OnlineStore>
 
 @section topCSS{
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
@@ -10,4 +12,4 @@
 
 @Html.Partial("OnlineStorePartial")
 @section endJS{
-}*@
+}
