--- a/Gemma/Views/OnlineStore/OnlineStore.cshtml
+++ b/Gemma/Views/OnlineStore/OnlineStore.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Gemma.ViewModel.OnlineStore>
+﻿@*@model IEnumerable<Gemma.ViewModel.OnlineStore>
 
 @{
     ViewBag.Title = "OnlineStore";
@@ -13,4 +13,4 @@
 
 @Html.Partial("OnlineStorePartial")
 @section endJS{
-}
+}*@
