--- a/Gemma/Views/Shared/_Footer.cshtml
+++ b/Gemma/Views/Shared/_Footer.cshtml
@@ -51,7 +51,7 @@
     <div class="footer-form-email">
 
         <label class="cm-required cm-email hidden" for="subscr_email46">Eメール</label>
-        <input type="text" name="subscribe_email" value="EMAIL" class="form-input-text" />
+        <input type="text" name="subscribe_email" placeholder="EMAIL" class="form-input-text" style="color:black"/>
         <button title="Go" class="form-btn-go" type="submit">ENTER</button>
     </div>
 </form>
