--- a/Gemma/Views/Shared/_BackStagePartialTop.cshtml
+++ b/Gemma/Views/Shared/_BackStagePartialTop.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="app-header header-shadow">
+﻿@using Microsoft.AspNet.Identity
+<div class="app-header header-shadow">
     <div class="app-header__logo">
     </div>
     <div class="app-header__mobile-menu">
@@ -14,6 +15,7 @@
     </div>
     <div class="app-header__content">
         <div class="app-header-right">
+            <a class="nav-link" href="@Url.Action("MemberInfo", "MemberCenter", new { id = User.Identity.GetUserId() })">@User.Identity.Name</a>
         </div>
     </div>
 </div>
