fix onlinestore link

--- a/Gemma/Views/Shared/_Header.cshtml
+++ b/Gemma/Views/Shared/_Header.cshtml
@@ -14,7 +14,7 @@
 
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="@Url.Action("OnlineStore","OnlineStore")">ONLINE STORE</a>
+                    <a class="nav-link active" href="@Url.Action("FindBrand","OnlineStore")">ONLINE STORE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("CollectionPhotos","Collection")">COLLECTION</a>
