--- a/Gemma/Views/Details/FindProductById.cshtml
+++ b/Gemma/Views/Details/FindProductById.cshtml
@@ -63,7 +63,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="showCart" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-lg" role="document" style="margin-top:15%;">
         <div class="modal-content" id="userDetails">
             <div class="modal-header">
                 <h5 class="modal-title">商品がカートに追加されました</h5>
@@ -106,13 +106,11 @@
 
 @section endJS{
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
 
     <script>
         var app;
         $(() => {
-
             //當選取Color照片時
             $('.pImages img').click(function () {
 
@@ -179,7 +177,6 @@
 
 
                     var orderPrice = $('#userCount').val() * $('#price').html().replace(' 円 + TAX', '');
-                    console.log('this price', orderPrice);
 
                     var jsonData = {
                         selectedImg: $('.selected').has('img').prevObject[0].outerHTML,
@@ -194,7 +191,6 @@
                     //    data: { items: jsonData }
                     //})
                     app.$data.items = jsonData
-                    alert(JSON.stringify(app.$data.items))
                     $('#showCart').modal('show');
                 }
             })
@@ -205,7 +201,6 @@
 @section topCSS{
 
     <style>
-
         #pPhoto > img {
             width: 100%;
         }
