add bookmark link

--- a/Gemma/Views/Details/_Layout.cshtml
+++ b/Gemma/Views/Details/_Layout.cshtml
@@ -80,7 +80,7 @@
 
 
                                 <li class="bookmark nav-item">
-                                    <a href="#" class="nav-link"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                                    <a href="@Url.Action("Index", "BookMark")" class="nav-link"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
                                 </li>
 
                                 <li class="cart nav-item">
@@ -109,7 +109,7 @@
 
 
                             <li class="bookmark nav-item">
-                                <a href="#" class="nav-link"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                                <a href="@Url.Action("Index", "BookMark")" class="nav-link"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
                             </li>
 
                             <li class="cart nav-item">
