--- a/Gemma/Views/Shared/_NewLoginPartial.cshtml
+++ b/Gemma/Views/Shared/_NewLoginPartial.cshtml
@@ -30,7 +30,7 @@
 
 
             <li class="bookmark">
-                <a href="#"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                <a href="@Url.Action("Index", "BookMark")"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
             </li>
 
             <li class="cart">
@@ -77,7 +77,7 @@ else
 
 
         <li class="bookmark">
-            <a href="#"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+            <a href="@Url.Action("Index", "BookMark")"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
         </li>
 
         <li class="cart">
