--- a/Gemma/Views/Shared/OnlineStorePartial.cshtml
+++ b/Gemma/Views/Shared/OnlineStorePartial.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model IEnumerable<Gemma.ViewModel.OnlineStore>
 
-@Html.Partial("IndexPartial")
+@*@Html.Partial("IndexPartial")*@
 
 <div class="container">
 
