create shop link

--- a/Gemma/Views/Shared/_Header.cshtml
+++ b/Gemma/Views/Shared/_Header.cshtml
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="@Url.Action("Index","Journall")">JOURNAL</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SHOP</a>
+                    <a class="nav-link" href="@Url.Action("Shop","SHOP")">SHOP</a>
                 </li>
                 @if (User.Identity.IsAuthenticated)
                 {
