--- a/Gemma/Views/Details/_Layout.cshtml
+++ b/Gemma/Views/Details/_Layout.cshtml
@@ -9,10 +9,15 @@
     @Styles.Render("~/Contentback/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Assets/css/FixedMenu.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <style>
         .fixed {
             height: 70px !important;
             animation-delay: 100ms;
+        }
+
+        .social-icons {
+            margin-right: 0;
         }
     </style>
 
@@ -41,7 +46,7 @@
                             <a class="nav-link" href="@Url.Action("Index","Journall")">JOURNAL</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SHOP</a>
+                            <a class="nav-link" href="@Url.Action("Shop","SHOP")">SHOP</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
@@ -128,7 +133,134 @@
         </div>
         @Html.Partial("_Social_Icons")
         @RenderBody()
-        @Html.Partial("_Footer")
+        <div class="container instagram-column ">
+            <section class="home-section-by-instagram">
+                <header class="section-header">
+                    <h1 class="section-title"><a href="https://www.instagram.com/daniella_and_gemma/">INSTAGRAM</a></h1>
+                    <p class="section-more"><a href="https://www.instagram.com/daniella_and_gemma/">all instagram</a></p>
+                </header>
+                <br />
+                <br />
+                <div class="instagram-body">
+                    <div class="instagram-list">
+                        <ul>
+                            <li>
+                                <a href="#"><img src="~/Assets/images/HomePage/IGImg01.jpg" /></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="~/Assets/images/HomePage/IGImg02.jpg" /></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="~/Assets/images/HomePage/IGImg03.jpg" /></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="~/Assets/images/HomePage/IGImg04.jpg" /></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="~/Assets/images/HomePage/IGImg05.jpg" /></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="~/Assets/images/HomePage/IGImg06.jpg" /></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+
+
+        <form action="https://danigemma.com/" method="post" name="subscribe_form" class="cm-processing-personal-data">
+            <input type="hidden" name="redirect_url" value="index.php?dispatch=journal.archive" />
+            <input type="hidden" name="newsletter_format" value="2" />
+
+            <h3 class="footer-form__title">NEWS    LETTER</h3>
+
+
+
+            <div class="footer-form-email">
+
+                <label class="cm-required cm-email" for="subscr_email46" style="display:none;">Eメール</label>
+                <input type="text" name="subscribe_email" placeholder="EMAIL" class="form-input-text" style="color:black" />
+                <button title="Go" class="form-btn-go" type="submit">ENTER</button>
+            </div>
+        </form>
+
+        <div class="container">
+            <div class="footer-support row">
+                <hr />
+                <hr />
+                <hr />
+                <ul class="row">
+                    <li class="shipping col-md-3">
+                        <div class="title">
+                            <img src="~/Assets/images/Icons/footer-icon-shipping.png" />
+                            <h3>SHIPPING</h3>
+                        </div>
+
+                        <p class="description">
+                            佐川急便にて全国一律送料400円でお届けします（一部地域・離島を除く）
+                        </p>
+                    </li>
+                    <li class="return col-md-3">
+                        <div class="title">
+                            <img src="~/Assets/images/Icons/footer-icon-return.png" />
+                            <h3 class="title">RETURN</h3>
+                        </div>
+
+
+                        <p class="description">
+                            商品到着から7日以内のご購入の商品につきましては返品・交換をお受けしております
+                        </p>
+                    </li>
+                    <li class="maintenance col-md-3">
+                        <div class="title">
+                            <img src="~/Assets/images/Icons/footer-icon-maintenance.png" />
+                            <h3>MAINTENANCE</h3>
+                        </div>
+
+                        <p class="description">
+                            お買い上げいただいた商品を長くご使用いただけるよう修理（有償）を承っております
+                        </p>
+                    </li>
+                    <li class="point col-md-3">
+                        <div class="title">
+                            <img src="~/Assets/images/Icons/footer-icon-point.png" />
+                            <h3>POINT</h3>
+                        </div>
+
+                        <p class="description">
+                            ご購入金額の1％（1ポイント1円としてご利用可）をポイントとして還元しております
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="footer-nav">
+            <ul class="row">
+                <li>
+                    <a href="#">SHOPPING GUIDE</a>
+                </li>
+                <li>
+                    <a href="#">TERM & CONDITIONS</a>
+                </li>
+                <li>
+                    <a href="#">PRIVACY POLICY</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+
+            <div class="footer-bottom">
+                <p>
+                    <small style="color:white;">© Daniella & GEMMA</small>
+                </p>
+            </div>
+            <br />
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
